--- a/tutorial_example1.ipynb
+++ b/tutorial_example1.ipynb
@@ -67,33 +67,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Downlaod the itwac embeddings from [here](https://drive.google.com/file/d/1xSxLkf7KgFVPaR3mlKxgWORosAwyIcs8/view?usp=sharing) or execute the code below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part 1: Gender Bias in Word Embedding\n",
     "\n",
     "\n",
     "### Step 1: Load data\n",
     "We first load the word embedding trained on a corpus of Google News texts consisting of 3 million English words and terms. The embedding maps each word into a 300-dimension vector. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "*** Reading data from ./embeddings/itwac128.tsv\n",
-      "(1247492, 128)\n",
-      "1247492 words of dimension 128 : ,, di, ., e, ..., minore-genitore/i, Babelzilla, Spaziolaboratorio, eorismo\n"
-     ]
-    }
-   ],
-   "source": [
-    "# load google news word2vec\n",
-    "E = WordEmbedding('./embeddings/itwac128.tsv')\n",
-    "\n",
-    "\n"
    ]
   },
   {
