Choose of degree classes

--- a/tutorial_example1.ipynb
+++ b/tutorial_example1.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -88,50 +88,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*** Reading data from ./embeddings/itwac128.tsv\n",
-      "(1247492, 128)\n",
-      "1247492 words of dimension 128 : ,, di, ., e, ..., minore-genitore/i, Babelzilla, Spaziolaboratorio, eorismo\n"
+      "*** Reading data from ./embeddings/twitter128.tsv\n",
+      "(1188949, 128)\n",
+      "1188949 words of dimension 128 : ___URL___, /, ,, :, ..., Intermou, Triscount, Bis', v=kxniyz@dgdmhw\n"
      ]
     }
    ],
    "source": [
-    "#E = WordEmbedding('./embeddings/itwac128.tsv')"
+    "E = WordEmbedding('./embeddings/twitter128.tsv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "537325 words of dimension 128 : di, e, che, la, ..., checcosf, dacris, pawprint, eorismo\n"
+      "327168 words of dimension 128 : di, che, e, a, ..., onqew, leadershipnon, yzibykeju, sbaraglliato\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 537325/537325 [00:40<00:00, 13254.58it/s]\n"
+      "100%|██████████| 327168/327168 [00:33<00:00, 9709.68it/s] \n"
      ]
     }
    ],
    "source": [
-    "\"\"\"E.filter_words(lambda w: w.isalpha() and w.islower())\n",
+    "E.filter_words(lambda w: w.isalpha() and w.islower())\n",
     "\n",
-    "with open('./embeddings/filtered_itwac128.tsv',\"w\") as file:\n",
+    "with open('./embeddings/filtered_twitter128.tsv',\"w\") as file:\n",
     "    for word in tqdm.tqdm(E.words):\n",
     "        string_to_write = \"\\t\".join([word] + list(map(str, list(E.v(word)))))+\"\\n\"\n",
-    "        file.write(string_to_write, )\"\"\""
+    "        file.write(string_to_write, )"
    ]
   },
   {
