--- a/debiasing_twitter.ipynb
+++ b/debiasing_twitter.ipynb
@@ -116,25 +116,6 @@
      "output_type": "stream",
      "text": [
       "uomo : informatica = donna : x\n",
-      "Analogy solution x =  [('biologia', '68.3%'), ('mate', '66.65%'), ('algebra', '66.23%'), ('grammatica', '65.42%'), ('geostoria', '65.2%'), ('chimica', '65.01%'), ('filosofia', '64.17%'), ('geometria', '63.25%'), ('professoressa', '61.94%'), ('geografia', '61.59%')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"uomo : informatica = donna : x\")\n",
-    "print(\"Analogy solution x = \", [(x[0], str(round(x[1]*100,2))+\"%\") for x in w2v_embeddings.most_similar(positive=['studentessa', 'matematica'], negative=['studente'], topn=10)])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uomo : informatica = donna : x\n",
       "Analogy solution x =  [('psicologia', '61.4%'), ('specializzazione', '59.94%'), ('studentessa', '59.55%')]\n",
       "\n",
       "uomo : x = donna : psicologia\n",
@@ -158,7 +139,6 @@
     "\n",
     "print(\"\\nstudente : matematica = studentessa : x\")\n",
     "print(\"Analogy solution x = \", [(x[0], str(round(x[1]*100,2))+\"%\") for x in w2v_embeddings.most_similar(positive=['studentessa', 'matematica'], negative=['studente'], topn=3)])\n",
-    "\n",
     "\n",
     "print(\"\\nlui : x = lei : filologia\")\n",
     "print(\"Analogy solution x = \", [(x[0], str(round(x[1]*100,2))+\"%\") for x in w2v_embeddings.most_similar(positive=['lui', 'filologia'], negative=['lei'], topn=3)])"
@@ -184,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +495,7 @@
        "70          psicologia  0.808069  0.191931"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +601,8 @@
      "output_type": "stream",
      "text": [
       "Bias score:  0.08919041276661636\n",
-      "Skew bias score:  -0.0751579533525986\n"
+      "Skew bias score:  -0.0751579533525986\n",
+      "Stereotype bias score:  0.014631945987510803\n"
      ]
     }
    ],
@@ -632,7 +613,8 @@
     "male_embeddings = [embeddings.v(w) for w in male_definitional]\n",
     "\n",
     "print(\"Bias score: \", metrics.bias_score(degree_class_embeddings, male_embeddings, female_embeddings))\n",
-    "print(\"Skew bias score: \", metrics.skew_bias_score(degree_class_embeddings, male_embeddings, female_embeddings))"
+    "print(\"Skew bias score: \", metrics.skew_bias_score(degree_class_embeddings, male_embeddings, female_embeddings))\n",
+    "print(\"Stereotype bias score: \", metrics.stereotype_bias_score(degree_class_embeddings, male_embeddings, female_embeddings))"
    ]
   },
   {
@@ -663,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +851,8 @@
      "output_type": "stream",
      "text": [
       "Bias score:  1.2112149220507601e-08\n",
-      "Skew bias score:  6.6258922904685745e-09\n"
+      "Skew bias score:  6.6258922904685745e-09\n",
+      "Stereotype bias score:  2.443563447491814e-09\n"
      ]
     }
    ],
@@ -880,7 +863,8 @@
     "male_embeddings_deb = [embeddings_deb.v(w) for w in male_definitional]\n",
     "\n",
     "print(\"Bias score: \", metrics.bias_score(degree_class_embeddings_deb, male_embeddings_deb, female_embeddings_deb))\n",
-    "print(\"Skew bias score: \", metrics.skew_bias_score(degree_class_embeddings_deb, male_embeddings_deb, female_embeddings_deb))"
+    "print(\"Skew bias score: \", metrics.skew_bias_score(degree_class_embeddings_deb, male_embeddings_deb, female_embeddings_deb))\n",
+    "print(\"Stereotype bias score: \", metrics.stereotype_bias_score(degree_class_embeddings_deb, male_embeddings_deb, female_embeddings_deb))"
    ]
   }
  ],
