removed unused methods

--- a/embeddings_visualization.ipynb
+++ b/embeddings_visualization.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,10 +27,9 @@
     "from tqdm import tqdm\n",
     "import pandas as pd\n",
     "import json\n",
-    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from debiaswe.data import load_professions, load_embeddings, load_embeddings_pandas\n",
+    "from debiaswe.data import load_professions, load_embeddings_pandas, load_glove_embeddings_pandas\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -44,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,6 +415,45 @@
     "print(f'[DEBUG] Neutral sterotyped profession: {neutral_vectors.iloc[debug_idx, 0]}')\n",
     "\n",
     "print(100*'=')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 GloVe embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ParserError",
+     "evalue": "Error tokenizing data. C error: EOF inside string starting at row 8",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mParserError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\ericr\\Documents\\GitHub\\unbiasing_nlp_embeddings\\embeddings_visualization.ipynb Cell 17'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/ericr/Documents/GitHub/unbiasing_nlp_embeddings/embeddings_visualization.ipynb#ch0000071?line=0'>1</a>\u001b[0m \u001b[39m# vocab, embeddings, word_to_idx, idx_to_word = load_embeddings()\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/ericr/Documents/GitHub/unbiasing_nlp_embeddings/embeddings_visualization.ipynb#ch0000071?line=1'>2</a>\u001b[0m glove_emb_df \u001b[39m=\u001b[39m load_glove_embeddings_pandas()\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\Documents\\GitHub\\unbiasing_nlp_embeddings\\debiaswe\\data.py:88\u001b[0m, in \u001b[0;36mload_glove_embeddings_pandas\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='file:///c%3A/Users/ericr/Documents/GitHub/unbiasing_nlp_embeddings/debiaswe/data.py?line=84'>85</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload_glove_embeddings_pandas\u001b[39m():\n\u001b[0;32m     <a href='file:///c%3A/Users/ericr/Documents/GitHub/unbiasing_nlp_embeddings/debiaswe/data.py?line=85'>86</a>\u001b[0m     path  \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(PKG_DIR, \u001b[39m'\u001b[39m\u001b[39m../embeddings\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mglove.6B.300d.txt\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> <a href='file:///c%3A/Users/ericr/Documents/GitHub/unbiasing_nlp_embeddings/debiaswe/data.py?line=87'>88</a>\u001b[0m     dt \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_csv(path, sep\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m\"\u001b[39;49m, header\u001b[39m=\u001b[39;49m\u001b[39mNone\u001b[39;49;00m)\n\u001b[0;32m     <a href='file:///c%3A/Users/ericr/Documents/GitHub/unbiasing_nlp_embeddings/debiaswe/data.py?line=88'>89</a>\u001b[0m     dt\u001b[39m.\u001b[39mrename(columns\u001b[39m=\u001b[39m{\u001b[39m0\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mword\u001b[39m\u001b[39m'\u001b[39m}, inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     <a href='file:///c%3A/Users/ericr/Documents/GitHub/unbiasing_nlp_embeddings/debiaswe/data.py?line=90'>91</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m dt\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\anaconda3\\envs\\debias_nlp_embeddings\\lib\\site-packages\\pandas\\util\\_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/util/_decorators.py?line=304'>305</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/util/_decorators.py?line=305'>306</a>\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/util/_decorators.py?line=306'>307</a>\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/util/_decorators.py?line=307'>308</a>\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/util/_decorators.py?line=308'>309</a>\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/util/_decorators.py?line=309'>310</a>\u001b[0m     )\n\u001b[1;32m--> <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/util/_decorators.py?line=310'>311</a>\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\anaconda3\\envs\\debias_nlp_embeddings\\lib\\site-packages\\pandas\\io\\parsers\\readers.py:680\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=664'>665</a>\u001b[0m kwds_defaults \u001b[39m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=665'>666</a>\u001b[0m     dialect,\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=666'>667</a>\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=675'>676</a>\u001b[0m     defaults\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mdelimiter\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m},\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=676'>677</a>\u001b[0m )\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=677'>678</a>\u001b[0m kwds\u001b[39m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m--> <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=679'>680</a>\u001b[0m \u001b[39mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\anaconda3\\envs\\debias_nlp_embeddings\\lib\\site-packages\\pandas\\io\\parsers\\readers.py:581\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=577'>578</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m parser\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=579'>580</a>\u001b[0m \u001b[39mwith\u001b[39;00m parser:\n\u001b[1;32m--> <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=580'>581</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m parser\u001b[39m.\u001b[39;49mread(nrows)\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\anaconda3\\envs\\debias_nlp_embeddings\\lib\\site-packages\\pandas\\io\\parsers\\readers.py:1254\u001b[0m, in \u001b[0;36mTextFileReader.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=1251'>1252</a>\u001b[0m nrows \u001b[39m=\u001b[39m validate_integer(\u001b[39m\"\u001b[39m\u001b[39mnrows\u001b[39m\u001b[39m\"\u001b[39m, nrows)\n\u001b[0;32m   <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=1252'>1253</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=1253'>1254</a>\u001b[0m     index, columns, col_dict \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mread(nrows)\n\u001b[0;32m   <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=1254'>1255</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[0;32m   <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/readers.py?line=1255'>1256</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclose()\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\anaconda3\\envs\\debias_nlp_embeddings\\lib\\site-packages\\pandas\\io\\parsers\\c_parser_wrapper.py:225\u001b[0m, in \u001b[0;36mCParserWrapper.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/c_parser_wrapper.py?line=222'>223</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/c_parser_wrapper.py?line=223'>224</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlow_memory:\n\u001b[1;32m--> <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/c_parser_wrapper.py?line=224'>225</a>\u001b[0m         chunks \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_reader\u001b[39m.\u001b[39;49mread_low_memory(nrows)\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/c_parser_wrapper.py?line=225'>226</a>\u001b[0m         \u001b[39m# destructive to chunks\u001b[39;00m\n\u001b[0;32m    <a href='file:///c%3A/Users/ericr/anaconda3/envs/debias_nlp_embeddings/lib/site-packages/pandas/io/parsers/c_parser_wrapper.py?line=226'>227</a>\u001b[0m         data \u001b[39m=\u001b[39m _concatenate_chunks(chunks)\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\anaconda3\\envs\\debias_nlp_embeddings\\lib\\site-packages\\pandas\\_libs\\parsers.pyx:805\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.read_low_memory\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\anaconda3\\envs\\debias_nlp_embeddings\\lib\\site-packages\\pandas\\_libs\\parsers.pyx:861\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\anaconda3\\envs\\debias_nlp_embeddings\\lib\\site-packages\\pandas\\_libs\\parsers.pyx:847\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\ericr\\anaconda3\\envs\\debias_nlp_embeddings\\lib\\site-packages\\pandas\\_libs\\parsers.pyx:1960\u001b[0m, in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mParserError\u001b[0m: Error tokenizing data. C error: EOF inside string starting at row 8"
+     ]
+    }
+   ],
+   "source": [
+    "# vocab, embeddings, word_to_idx, idx_to_word = load_embeddings()\n",
+    "glove_emb_df = load_glove_embeddings_pandas()"
    ]
   },
   {
