added bib to the ipynb

--- a/embeddings_visualization.ipynb
+++ b/embeddings_visualization.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Learning debiased embeddings"
+    "# Learning Debiased Embeddings\n",
+    "[Learning Gender-Neutral Word Embeddings](https://aclanthology.org/D18-1521) (Zhao et al., EMNLP 2018)"
    ]
   },
   {
