--- a/hard-debias_italian_we.ipynb
+++ b/hard-debias_italian_we.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Debiasing italian word embeddings"
+    "# Hard-debiasing on Italian Word Embeddings\n",
+    "Work based on the paper [Man is to Computer Programmer as Woman is to Homemaker? Debiasing Word Embeddings](https://arxiv.org/abs/1607.06520) (Bolukbasi et al., 2016)"
    ]
   },
   {
@@ -12,7 +13,8 @@
    "metadata": {},
    "source": [
     "### Downlaod data \n",
-    "First of all, you need to download the Italian Twitter Embeddings pretraned from the following link [here](https://drive.google.com/file/d/15L4NM0NpxSNF6QAjp-E83P_MgA5TkKHl/view?usp=sharing) and insert the file into the `embeddings` folder."
+    "First of all, you need to download the Italian Twitter Embeddings pretraned from the following link [here](https://drive.google.com/file/d/15L4NM0NpxSNF6QAjp-E83P_MgA5TkKHl/view?usp=sharing) and insert the file into the `embeddings` folder.\n",
+    "It is a filtered version of the [original word embeddings](http://www.italianlp.it/download-italian-twitter-embeddings/). "
    ]
   },
   {
@@ -149,7 +151,7 @@
    "metadata": {},
    "source": [
     "## 2. Degree classes stereotypes\n",
-    "This experiment investigates gender representation for 30 different degree classes in the Italian university system in the twitter word embeddings.\n",
+    "This experiment investigates gender representation for 32 different degree classes in the Italian university system in the twitter word embeddings.\n",
     "For each degree class, we compute its *gender score*. "
    ]
   },
