metric evaluation gn-glove

--- a/gn-glove_we_visualization.ipynb
+++ b/gn-glove_we_visualization.ipynb
@@ -31,7 +31,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from debiaswe.data import load_professions, load_embeddings_pandas, load_glove_embeddings_pandas\n",
-    "\n",
+    "import debiaswe.metrics as metrics\n",
     "%matplotlib inline"
    ]
   },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "[5 rows x 301 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,14 +707,196 @@
     "ax.legend([\"Male\", \"Female\", \"Neutral\"], bbox_to_anchor=(1.1, 1.05), fancybox=True, shadow=True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Metric evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = os.path.join(\"data\", \"english_data\")\n",
+    "data = pd.read_csv(os.path.join(path, \"degree_classes.csv\"), delimiter=\";\", encoding='latin-1')\n",
+    "data = data[data['AnnoA'] == '2020/2021']\n",
+    "data = data.pivot_table(columns=['SESSO'], index=['ClasseNOME'], values ='Isc', fill_value=0, aggfunc=sum)\n",
+    "data = pd.DataFrame(np.hstack([np.array(data.index).reshape(-1, 1), data.values]), columns=['ClasseNOME', 'F', 'M'])\n",
+    "\n",
+    "# # read the aliases of the interesting degree classes\n",
+    "degree_class_aliases = json.load(open(os.path.join(path, \"degree_classes_aliases.json\"), \"r\"))\n",
+    "degree_class_names = degree_class_aliases.values()\n",
+    "\n",
+    "# # keep only interesing degree classes\n",
+    "gender_degree_classes = data[data['ClasseNOME'].isin(degree_class_aliases.keys())]\n",
+    "gender_degree_classes['ClasseNOME'] = gender_degree_classes['ClasseNOME'].map(degree_class_aliases)\n",
+    "\n",
+    "# # change the counts to percentage\n",
+    "total = gender_degree_classes['F']+gender_degree_classes['M']\n",
+    "gender_degree_classes['F'] = gender_degree_classes['F']/(total)\n",
+    "gender_degree_classes['M'] = gender_degree_classes['M']/(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ClasseNOME</th>\n",
+       "      <th>F</th>\n",
+       "      <th>M</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>communication</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>architecture</td>\n",
+       "      <td>0.494012</td>\n",
+       "      <td>0.505988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>finance</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>biology</td>\n",
+       "      <td>0.652174</td>\n",
+       "      <td>0.347826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>biotechnology</td>\n",
+       "      <td>0.70297</td>\n",
+       "      <td>0.29703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>pharmacy</td>\n",
+       "      <td>0.753319</td>\n",
+       "      <td>0.246681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>archeology</td>\n",
+       "      <td>0.769231</td>\n",
+       "      <td>0.230769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>anthropology</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ClasseNOME         F         M\n",
+       "42  communication       0.0       1.0\n",
+       "39   architecture  0.494012  0.505988\n",
+       "45        finance       0.5       0.5\n",
+       "40        biology  0.652174  0.347826\n",
+       "41  biotechnology   0.70297   0.29703\n",
+       "46       pharmacy  0.753319  0.246681\n",
+       "38     archeology  0.769231  0.230769\n",
+       "44   anthropology       0.9       0.1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gender_degree_classes.sort_values(by='F')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "female_definitional = [\"she\", \"woman\", \"mother\", \"wife\", \"sister\", \"female\"]\n",
+    "male_definitional = [\"he\", \"man\", \"father\", \"husband\", \"brother\", \"male\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bias score:  0.048436488678601834\n",
+      "Skew bias score:  -0.02344309208927338\n",
+      "Stereotype bias score:  0.00976779141015035\n"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings = emb_df[:-1]\n",
+    "\n",
+    "degree_class_embeddings = []\n",
+    "## Some word are missing from the embeddings\n",
+    "for w in degree_class_names:\n",
+    "    emb = embeddings.loc[embeddings[\"word\"] == w][range(1,300)].to_numpy()\n",
+    "    if emb.shape[0] == 0:\n",
+    "        continue\n",
+    "    degree_class_embeddings.append(emb.reshape(299))\n",
+    "female_embeddings = [embeddings.loc[embeddings[\"word\"] == w][range(1,300)].to_numpy().reshape(299) for w in female_definitional]\n",
+    "male_embeddings = [embeddings.loc[embeddings[\"word\"] == w][range(1,300)].to_numpy().reshape(299) for w in male_definitional]\n",
+    "\n",
+    "\n",
+    "print(\"Bias score: \", metrics.bias_score(degree_class_embeddings, male_embeddings, female_embeddings, 299))\n",
+    "print(\"Skew bias score: \", metrics.skew_bias_score(degree_class_embeddings, male_embeddings, female_embeddings, 299))\n",
+    "print(\"Stereotype bias score: \", metrics.stereotype_bias_score(degree_class_embeddings, male_embeddings, female_embeddings, 299))"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "1c92815ba542fd4a32c4ca5995ff61e2abc465a0a2d052217182d1ebd75231c2"
+   "hash": "178bf5981fdd55eb44b2eceaeab6e170485538d738242094d90bbd9862a12edb"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('debias_nlp_embeddings')",
+   "display_name": "Python 3.7.0 ('nlp')",
    "language": "python",
    "name": "python3"
   },
@@ -728,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.0"
   },
   "orig_nbformat": 4
  },
